--- a/templates/layout.html
+++ b/templates/layout.html
@@ -44,6 +44,9 @@
           <li class="nav-item">
             <a class="nav-link" href="/contact">Contact</a>
           </li>
+          <li class="nav-item">
+            <a class="nav-link" href="/dashboard">Log in</a>
+          </li>
         </ul>
       </div>
     </div>
